k8s/eks/loadblancer-controller/dev/example-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-deployment
spec:
  selector:
    matchLabels:
      app: sample-app
  replicas: 1
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - name: nginx-container
        image: nginx:1.7.9
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sample-service
  annotations:
    external-dns.alpha.kubernetes.io/hostname: test.eks-twitter.net
spec:
  type: NodePort
  selector:
    app: sample-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
