k8s/eks/loadblancer-controller/dev/example-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    # - host: eks-twitter.net
    - http:
        paths:
          - path: /*
            backend:
              serviceName: sample-service
              servicePort: 80
